--- a/01-HTML-Git-CSS/02-Challenge/Develop/index.html
+++ b/01-HTML-Git-CSS/02-Challenge/Develop/index.html
@@ -49,23 +49,24 @@
         </div>
     </div>
     <div class="benefits">
+<!--Condensed "benefit" section to single class-type-->
         <div class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead-Generation symbol"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <h3>Brand Awareness</h3> alt=
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness symbol" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Cost Management symbol"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
